@@ -291,7 +291,9 @@ libspectrum_sna_write( libspectrum_byte **buffer, size_t *length,
      etc which are not stored in .sna format */
   *out_flags = LIBSPECTRUM_FLAG_SNAPSHOT_MINOR_INFO_LOSS;
 
-  /* We don't save the ZXCF at all */
+  /* We don't save the ZXATASP or ZXCF at all */
+  if( libspectrum_snap_zxatasp_active( snap ) )
+    *out_flags |= LIBSPECTRUM_FLAG_SNAPSHOT_MAJOR_INFO_LOSS;
   if( libspectrum_snap_zxcf_active( snap ) )
     *out_flags |= LIBSPECTRUM_FLAG_SNAPSHOT_MAJOR_INFO_LOSS;
 
